Cycles viewport/preview flickers, when moving mouse across editors #39420

Closed
opened 2014-03-26 00:15:26 +01:00 by jens verwiebe · 9 comments
Member

System Information
OSX, all versions

Blender Version
Broken: 2.70 and trunk after Sat, 14 Dec 2013 15:24:20
Worked: all before cccd06ea44 ( Fix #37810: GLSL dither shader not working on OS X )
cccd06ea44

Short description of error
Moving mouse while rendering cycles preview causes viewport flicker when crossing space types.

See screencapture movie: http://www.jensverwiebe.de/Other/flicker.mov

Exact steps for others to reproduce the error
Load BMW.blend, set viewport to render, move mousepointer from texteditor to properties and back.

Cherio ... Jens

**System Information** OSX, all versions **Blender Version** Broken: 2.70 and trunk after Sat, 14 Dec 2013 15:24:20 Worked: all before cccd06ea447f8418b03b5bec79f6f0230d793952 ( Fix #37810: GLSL dither shader not working on OS X ) http://git.blender.org/gitweb/gitweb.cgi/blender.git/commit/cccd06ea447f8418b03b5bec79f6f0230d793952 **Short description of error** Moving mouse while rendering cycles preview causes viewport flicker when crossing space types. See screencapture movie: http://www.jensverwiebe.de/Other/flicker.mov **Exact steps for others to reproduce the error** Load BMW.blend, set viewport to render, move mousepointer from texteditor to properties and back. Cherio ... Jens
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by jens verwiebe 2014-03-26 00:15:26 +01:00
Author
Member

Added subscriber: @jensverwiebe

Added subscriber: @jensverwiebe
Sergey Sharybin removed their assignment 2014-03-26 05:45:17 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I'm not sure why to assign to me, it's an OSX related thing and i don't have OSX by hand.

I'm not sure why to assign to me, it's an OSX related thing and i don't have OSX by hand.
Sergey Sharybin self-assigned this 2014-03-26 10:26:18 +01:00

Assigning back, found a patch, will apply a bit later.

Assigning back, found a patch, will apply a bit later.

This issue was referenced by blender/blender-addons-contrib@74518b2826

This issue was referenced by blender/blender-addons-contrib@74518b28267e9b18199212fbaa3c689fa018d20c

This issue was referenced by 74518b2826

This issue was referenced by 74518b28267e9b18199212fbaa3c689fa018d20c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 74518b2826.

Closed by commit 74518b2826.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39420
No description provided.